themes/VTPL/css/style.css
/* ... */
.detail tr td[scope=row] 
{
    margin-top: 2px;
    margin-bottom: 10px;
    text-align: right;
    white-space:nowrap;
}
.detail tr td > li
{
    margin-left: 1.5em;
}
/* editviews top buttons */
#EditView > table {margin-bottom: 2px;}

/* editviews */
.edit
{
    padding:0 6px 12px 10px !important;
}

.edit > table
{
    margin-bottom: 0px;
    padding: 3px 3px 3px 10px!important;
}

.edit h4
{
    text-align: left;
    margin-top: 0;
    padding-top:0;
    margin-top: 10px;
    padding-left:0;
}
.edit tr td
{
    font-weight: normal;
    padding: 0 !important;
    vertical-align: middle;
    padding: 3px !important;
}
.edit tr td[scope=row]
{
    padding: 5px 5px 5px 7px !important;
    text-align: left;
    vertical-align: top;
}
.edit tr th 
{
    padding: 5px 5px 5px 7px !important;
}
table#tabFormPagination td,  #tabFormPagination, #EditView > table#tabFormPagination.detail.view
{
    border-bottom: none;
    margin-bottom: 0;
}
.edit tr td table, 
.edit tr td table tr td
{
    padding: 3px 3px 3px 0 !important;
    padding: 0 !important;
}
table.edit.view {
    margin-top: 0;
}
/* search panel on top of list views ( extends .edit .view definition ) */
.search
{    
    padding:10px 6px 12px 10px;
}
.search > table
{
    padding: 0 !important;
    margin: 0;
}
.search td span
{
    color:#444444;
}
.search td input[type=text],
.search td input[type=password],
.search td select
{
    width: 150px !important;
}

/* Listview styles */
.listViewBody {
    box-shadow: #ccc 0px 0px 10px;
    -moz-box-shadow: #ccc 0px 0px 10px;
    -webkit-box-shadow: #ccc 0px 0px 10px;
    -moz-border-radius: 6px;
    border-radius: 6px;
    -webkit-border-radius: 6px;

}

.listViewBody .list
{
    -moz-border-radius: 0px 0px 6px 6px;
    border-radius: 0px 0px 6px 6px;
    -webkit-border-top-left-radius: 0px;
    -webkit-border-top-right-radius: 0px;
}

.list.view
{
    margin-top: 0;
}

.listViewBody .list.view {
    border-top: 0px none;
}

.listViewBody.nosearch .list.view {
    border-top: 1px solid;
}

.listViewBody.nosearch .list {
    border-top: 1px solid;
    -moz-border-radius: 6px;
    border-radius: 6px;
    -webkit-border-radius: 6px;
}

.listViewBody .list
{
    margin-bottom: 0px;
}


.list, .edit .list
{
    padding: 0 !important;
    margin-bottom: 10px;
}
.list tr.pagination,
.list tr.pagination td,
.list tr.pagination td table
{
    padding: 0;
    border: 0;
    margin: 0;
}
.list tr.pagination td table td
{
    padding: 4px 0px 4px 4px !important;
}
.list tr.pagination td table td button
{

}
.list tr.pagination td table td a:link, 
.list tr.pagination td table td a:visited,
.reportGroupByDataChildTablelistViewThS1 a:link,
.reportGroupByDataChildTablelistViewThS1 a:visited
{
    font-weight: bold;
    text-decoration: none;
    padding: 2px 0px 3px 0px;
}
.list tr.pagination td table td a:hover,
.reportGroupByDataChildTablelistViewThS1 a:hover
{
    text-decoration: underline;
}
.list tr.pagination .buttons
{
    padding: 2px 2px 2px 0 !important;
}
.list tr.pagination #selectCountTop
{
    width: 5em;
}
.td_alt, .list tr th, .list tr td[scope=col],
.edit .list tr th, .edit .list tr td[scope=col]
{
    font-size: 11px;
    font-weight: bold;
    text-align: left;
    padding: 6px 5px 6px 5px;
    border-left: none;
    border-right: none;
    white-space:nowrap;
}
.list tr td
{
    vertical-align: middle;
    padding: 6px 8px 6px 5px;
}
.list tr.pagination td
{
    padding: 0 !important;
}
.list tr td.odd
{
    padding: 3px 8px 5px 5px;
    vertical-align: middle;
}

.list th a:link, 
.list th a:visited,
.list td[scope=col] a:link, 
.list td[scope=col] a:visited
{
    font-weight: bold;
    text-decoration: none;
}

.list th a:hover,
.list td[scope=col] a:hover
{
    text-decoration: underline;
}

.list tr.oddListRowS1 td,
.list tr.evenListRowS1 td
{
    white-space: normal;
    word-wrap: break-word;
}

.list tr.oddListRowS1 td em,
.list tr.evenListRowS1 td em
{
    font-weight: normal;
}

.list tr.oddListRowS1 td[nowrap], 
.list tr.evenListRowS1 td[nowrap] 
{ 
    white-space: nowrap;
    word-wrap: normal;
}

.list td a.listViewTdToolsS1,
.list tr td.nowrap
{
    white-space: nowrap;
    word-wrap: normal;
}

.list td.inlineButtons {
    text-align: right;
    min-width: 75px;	
}
/* style for page content tables */
.other
{
    border: none !important;
    margin-bottom: 20px !important;
    padding: 0 !important;
    width: 100%;
}
.other td 
{
    font-weight: normal;
    padding: 4px 10px 4px 6px;
    vertical-align: middle;
}
.other td[scope=row] 
{
    padding: 4px 6px 4px 6px;
    white-space:nowrap;
}
.other .edit td
{
    background: transparent !important;
}
.other .edit 
{
    margin-top: 0;
}

/* Special for Campaigns Wizard */
.other td.edit #wizard td
{
    background: transparent;
}
.other td.edit #wizard h4
{
    padding-left: 0;
    margin-top: 0;
}
#wizard td
{
    white-space: normal;
    word-wrap: break-word;
}

/* detail view */
.detail.view,
.detail table,
table.detail
{
    padding: 0;
    width: 100%;
}
.detail tr.pagination td
{
    padding-top: 4px;
    text-align: right;
    vertical-align: middle;
}
.detail table tr.pagination td
{
    padding-bottom: 4px;
}
.detail td > table tr td
{
    border: none;
}
/* Upgrade Wizard*/
.small{
    width:100%;
}
.small table{
    width:auto;
}
.small tr td table{
    background-color:transparent;
}
.small tr td[scope=row] table tr td, .small tr td[scope=row] table tr th{
    background-color:transparent;
}

.small tr td table tr th{
    text-align:left;
    border-bottom:none;
}

/* for report wizard */
.reportwizard
{
    padding: 10px 6px 12px 10px;
}
.reportwizard > table
{
    padding: 0 !important;
}
.reportwizard tr td
{
    vertical-align: middle;
}
/* for subpanel tabs */
ul.tablist, ul.subpanelTablist
{
    list-style: none;
    padding: 3px 0;
    margin: 0;
}

ul.tablist li, ul.subpanelTablist li
{
    list-style: none;
    margin: 0;
    display: inline;
}
/* ... */

